# spl_freethrow_biomechanics_analysis_ml_prediction

./: .env  .gitignore  README.md  app_check.ipynb  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: .dockerignore  Dockerfile  Dockerfile.mlflow  devcontainer.env  devcontainer.json  entrypoint.sh  environment.yml
.github/workflows/: ml-pipeline.yml
.jupyter/: jupyter_notebook_config.py
backups/notebooks/: crawl4ai.ipynb  graphreader_neo4j_langgraph.ipynb  langchain_quickstart_ollama_llamamodelandembed.ipynb  langchain_rag_nba_api.ipynb  langchain_rag_quickstart.ipynb  llama3.2_images.ipynb  neo4j_llama3.2_nomic.ipynb  neo4j_llama3_ollamaembed.ipynb  sql_langchain bot.ipynb  table_augmented_retrieval_model.ipynb
data/: new_data_with_predictions.csv
data/Deep_Learning_Final/: ANKLE_aggregated_feature_importance.pkl  ELBOW_aggregated_feature_importance.pkl  Final Project Paper.docx  Final Project Paperv2.docx  HIP_aggregated_feature_importance.pkl  KNEE_aggregated_feature_importance.pkl  L_ANKLE_injury_risk_model_feature_list.pkl  L_ELBOW_injury_risk_model_feature_list.pkl  L_HIP_injury_risk_model_feature_list.pkl  L_KNEE_injury_risk_model_feature_list.pkl  L_WRIST_injury_risk_model_feature_list.pkl  Progress report.docx  R_ANKLE_injury_risk_model_feature_list.pkl  R_ELBOW_injury_risk_model_feature_list.pkl  R_HIP_injury_risk_model_feature_list.pkl  R_KNEE_injury_risk_model_feature_list.pkl  R_WRIST_injury_risk_model_feature_list.pkl  WRIST_aggregated_feature_importance.pkl  all_models_summary.csv  by_trial_exhaustion_score_model_feature_list.pkl  darts_model_metrics.csv  injury_risk_model_feature_list.pkl  model_summary.csv  model_summary2.csv  model_summary_final.csv  ~$nal Project Paperv2.docx
data/default_spl_example/: final_ml_df_selected_features_columns.pkl  tuning_results.json
data/model/: CatBoost_model.pkl  Random Forest_model.pkl  XGBoost_model.pkl  classification_report.txt  tuning_results.json
data/predictions/: final_predictions_with_shap.csv  global_shap_recommendations.json  new_data_with_predictions.csv  predictions_CatBoost.csv  predictions_Random_Forest.csv  predictions_XGBoost.csv
data/preprocessor_config/: preprocessor_config_timeseries_by_trial_exhaustion_score.yaml  preprocessor_config_timeseries_injury_risk.yaml
data/processed/: Random Forest_model.pkl  XGBoost_model.pkl  classification_report.txt  final_ml_dataset.csv  predictions.csv  tuning_results.json
notebooks/: 3d_court_checks.ipynb  lstm_rnn_energy_predict.ipynb
notebooks/4090_gpu/: docker_uv_env_setup_4090.ipynb
notebooks/Deep_Learning_Final/: Applications of CNN.ipynb  Applications of RNN.ipynb  Understanding_RNN.ipynb  loaded_features.json  lstm_rnn_energy_predict_granular_dataset_TIMESERIESDATAPREPROCESSOR.ipynb  lstm_rnn_energy_predict_granular_dataset_final_project copy 2.ipynb  lstm_rnn_energy_predict_granular_dataset_final_project copy.ipynb  lstm_rnn_energy_predict_granular_dataset_final_project.ipynb  lstm_rnn_energy_predict_granular_dataset_final_project_modular.ipynb  lstm_rnn_energy_predict_granular_dataset_final_project_with_summeddata.ipynb
notebooks/freethrow_predictions/: animate_calc_bayes_shap.py  animate_mod_nb_shap_bayes_calc_final copy.ipynb  animate_mod_nb_shap_bayes_calc_final.ipynb  app.py  classification_report.txt  (+6 more)
tasks/: __init__.py  inference.py  training.py  tuning.py
tests/: test_pytorch.py  test_pytorch_gpu.py  test_summary.py  test_uv.py  train_tune_inference_jobs_mod_test_notebook.ipynb
(+1104 files in other folders)
